# episodic

./: .gitignore  LICENSE  README.md  initial_prompt.md  pyproject.toml
.claude-plugin/: marketplace.json
collector/: README.md
dashboard/: README.md
dataset-exporters/: README.md
docs/: TESTING.md  design-reward-quality-audit.md  design-reward-signal.md  eval-ai-trains-ai-reward-changes.md  harbor-interop.md  proof-reward-quality-coverage.md
episode-store/: README.md
examples/: clamp.py  reverse_words.py  slugify.py
github-linker/: README.md
notebooks/: 01_quickstart.ipynb  02_datasets.ipynb  03_reward_and_fidelity.ipynb  04_replay_and_loop.ipynb  05_world_model_agentworld.ipynb  README.md  build.py
plugin-claude-code/.claude-plugin/: plugin.json
plugin-claude-code/commands/: trace.md
plugin-claude-code/hooks/: hooks.json
plugin-codex/: README.md  config.example.toml  import_rollout.py  notify.py  test_codex.py
replay-runner/: README.md
rl-pipeline/: README.md  pipeline.py  requirements.txt  stages.py  test_pipeline.py
schemas/: episode.schema.json
src/episodic/: __init__.py  cli.py  paths.py  schema.py  service.py  store.py
src/episodic/collector/: README.md  __init__.py  hook.py  otel.py
src/episodic/core/: deploydetect.py  diffparse.py  episode.py  feedback.py  gitinfo.py  ids.py  normalize.py  reward.py  rubric.py  segment.py  summary.py  testdetect.py  transcript.py  validity.py
src/episodic/dashboard/: server.py
src/episodic/exporters/: __init__.py
src/episodic/fidelity/: __init__.py
tests/: conftest.py  test_clamp.py  test_cwd_fidelity.py  test_dashboard.py  test_deploy_segment.py  test_diff_status.py  test_diff_trust.py  test_exporters.py  test_feedback.py  test_fidelity.py  test_github.py  test_gitinfo_diffs.py  test_grpo_rewards.py  test_harbor_export.py  test_hook.py  test_import_diff.py  test_label_cli.py  test_loop.py  test_mlx_trainer.py  test_normalize_exit.py  test_otel.py  test_outcome_watcher.py  test_paths_safety.py  test_preflight_gate.py  test_regression.py  test_renormalize.py  test_replay.py  test_reward_rubric.py  test_reward_test_pass.py  test_rubric.py  test_sao_core.py  test_selfcheck.py  test_slugify.py  test_testdetect.py  test_testing_factory.py  test_tinker_trainer.py  test_trainers.py  test_transcript_exit.py  test_trl_sao.py  test_validity.py  (+2 more)
(+17 files in other folders)
