[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "episodic"
version = "0.1.0"
description = "Turn coding agent sessions into structured, outcome-labeled episodes for review, datasets, replay and offline RL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Episodic contributors" }]
keywords = ["claude-code", "codex", "llm", "agents", "rl", "datasets", "telemetry"]
dependencies = []

[project.optional-dependencies]
datasets = ["pyarrow>=14", "datasets>=2.14"]
rl = ["numpy>=1.24"]
trl = ["trl>=0.12", "transformers>=4.44", "datasets>=2.14", "torch>=2.2", "accelerate>=0.30"]
unsloth = ["unsloth", "trl>=0.12", "datasets>=2.14"]
otel = []
dev = ["pytest>=7"]
notebooks = ["jupyter>=1", "nbformat>=5.9", "nbconvert>=7", "ipykernel>=6", "matplotlib>=3.7", "pandas>=2"]
tutorials = ["jupyter>=1", "nbformat>=5.9", "nbconvert>=7", "ipykernel>=6", "matplotlib>=3.7", "pandas>=2"]

[project.scripts]
episodic = "episodic.cli:main"

[project.urls]
Homepage = "https://github.com/episodic/episodic"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
episodic = ["py.typed"]
